@@ -30,6 +30,7 @@ ToDo:
 	  static inline.
 	- Remove unused ntfs_dirty_inode().
 	- Cleanup super operations declaration in fs/ntfs/super.c.
+	- Wrap flush_dcache_mft_record_page() in #ifdef NTFS_RW.
 
 2.1.7 - Enable NFS exporting of mounted NTFS volumes.
 
